--- a/src/App.css
+++ b/src/App.css
@@ -38,30 +38,58 @@
   }
 }
 
+/* App.css */
+
+/* App.css */
 .grid {
   display: grid;
-  grid-template-columns: repeat(8, 50px);
-  grid-template-rows: repeat(8, 50px);
-}
-
-.box {
+  grid-template-columns: repeat(14, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  gap: 1px;
+  width: 100%;
   border: 1px solid #ccc;
 }
 
-.outside-box {
-  width: 100px;
-  height: 100px;
-  background-color: #ccc;
-  margin-top: 20px;
-  text-align: center;
-  line-height: 100px;
+.box {
+  border: 1px solid #ddd;
+  min-height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.box.label {
+  background-color: #f0f0f0;
+  font-weight: bold;
 }
 
 .highlight {
-  background-color: lightgreen;
+  background-color: #ffa;
 }
 
 .dropped-item {
-  background-color: #f0f0f0;
+  background-color: #8bc34a;
+  border: 1px solid #666;
+  border-radius: 3px;
+  color: #fff;
   padding: 5px;
+  cursor: grab;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.outside-item {
+  margin: 5px;
+  padding: 10px;
+  background-color: #03a9f4;
+  color: white;
+  border-radius: 3px;
+  cursor: grab;
+  user-select: none;
+  width: 20%;
 }
